========================================
[FEATURES]
Added a repeatable --not option to let you supply patterns that should NOT
match. For example, if you want to search for "dogs" but not if "cats" or
"fish" are on the same line, you can do:

    ack dogs --not cats --not fish

Added .Rmd to the list of extensions understood to be R. Thanks, Kieran
Mace. (GH#358)


v3.6.0      Sat Aug 20 22:57:47 CDT 2022
========================================
[FEATURES]
Added default ignores for Python's pickle serialization format (GH#348)

Added default ignore for Visual Studio's user & workspace settings. Thanks,
Gabor Szabo. (GH#324)

Added support for the Crystal language. Thanks, Gabor Szabo. (GH#340)

Fixed some spelling errors. Thanks, Frieder Bluemle. (GH#310)

Added .sbt as a Scala extension. Thanks, Grzegorz Kaczmarczyk. (GH#322)

[DOCS]
Fixed incorrect example in the docs for --range-start. Thanks, Alex Beamish.


v3.5.0      Fri Mar 12 22:29:44 CST 2021
========================================
[FIXES]
Reworked the option parsing to run correctly with Getopt::Long 2.38.

[FEATURES]
Added support for the Elm language. (GH#316)

Added support for the Purescript language. (GH#317)

Added support for the Bazel build tool. (GH#327)


v3.4.0      Mon Jun 29 23:04:18 CDT 2020
========================================
[FEATURES]
When calling "ack -c" to get a list of filenames and counts, the filename
would not be colored like when getting normal search results.  Now it will.
Thanks to Matthew Hughes for adding the feature, and Ophir Lifshitz for the
suggestion. (GH#282)

Added --toml for the TOML filetype. (GH#306)

[FIXES]
The test t/ack-x.t would fail when run as root. Now it is skipped. Thanks,
Michael LaGrasta. (GH#217)


v3.3.1      Mon Jan 13 10:27:16 CST 2020
========================================
[FIXES]
Some regexes would be shown as invalid when used with the -Q option.  Since
the -Q tells ack to treat the regex as a literal, this shouldn't be
possible.  (GH#294)