@@ -2395,6 +2395,7 @@ mailing list.
 How appropriate to have I<ack>nowledgements!
 
 Thanks to everyone who has contributed to ack in any way, including
+Thomas Gossler,
 Kieran Mace,
 Volker Glave,
 Axel Beckert,
